Run the master and worker daemon with some special java options.